<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:id="@+id/parentLayout">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/source_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_pick"
        app:layout_constraintBottom_toTopOf="@+id/view_results_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        tools:ignore="InvalidId"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        app:strokeWidth="5dp"
        app:strokeColor="@color/grey_600"/>

    <Button
        android:id="@+id/view_results_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:text="@string/view_results"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="196dp"
        android:clickable="true"
        android:contentDescription="@string/edit"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#EDE7F6"

        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/image_view" />

</androidx.constraintlayout.widget.ConstraintLayout>